# SmartKisaan

./: README.md
djangoproject/myproject/: .gitignore  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  users.db
djangoproject/myproject/crop_suggestions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djangoproject/myproject/crop_suggestions/migrations/: 0001_initial.py  0002_initial_data.py
djangoproject/myproject/crop_suggestions/static/css/: crop_suggestion.css
djangoproject/myproject/crop_suggestions/templates/: crop_suggestion.html
djangoproject/myproject/myapp/: forms.py  models.py  urls.py  utils.py  views.py
djangoproject/myproject/myapp/ai_model/: predictor.py  train_model.py
djangoproject/myproject/myapp/data/: market_prices.csv
djangoproject/myproject/myapp/migrations/: 0001_initial.py  0002_productforrent_image_productforsale_image.py  0003_productforrent_category_productforsale_category.py  0004_cartitem_order.py  0005_remove_order_is_rent_remove_order_product_name_and_more.py  0006_cropsuggestion.py  0007_auto_20250418_2011.py
djangoproject/myproject/myapp/templates/: base.html  buy.html  cart.html  checkout.html  crop_suggestion.html  edit_product.html  home.html  login.html  my_listings.html  my_orders.html  predict.html  rent_in.html  rent_out.html  sell.html  signup.html
djangoproject/myproject/myproject/: settings.py  urls.py
djangoproject/myproject/staticfiles/: staticfiles.json
djangoproject/myproject/staticfiles/myapp/css/: crop_suggestion.b71255781667.css  login.css  signup.568337b97105.css  (+1 more)
(+4 files in other folders)
