[tool.poetry]
name = "smartkisaan"
version = "0.1.0"
description = "A Django application for crop suggestions"
authors = ["SmartKisaan"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 